force-app/main/default/objects/Auth0_Config__mdt/Auth0_Config__mdt.object-meta.xml
<CustomObject>
    <description>Store Auth0 OAuth details</description>
    <label>Auth0 Config</label>
    <pluralLabel>Auth0 Configs</pluralLabel>
</CustomObject>