force-app/main/default/objects/Auth0_Config__mdt/fields/Authorization_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Endpoint_URL__c</fullName>
    <label>Authorization Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>