force-app/main/default/objects/Auth0_Config__mdt/fields/DFD_Auth0_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>DFD_Auth0_Login_URL__c</fullName>
    <label>DFD Auth0 Login URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>