force-app/main/default/objects/Auth0_Config__mdt/fields/Redirect_Url__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Url__c</fullName>
    <label>Redirect Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>