force-app/main/default/objects/Auth0_Config__mdt/fields/Token_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint_URL__c</fullName>
    <label>Token Endpoint URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>